# Compilador_Didatico

./: CMakeLists.txt  README.md  VM_GUI.py  gui_compilador.py  iniciar.bat  main.cpp  novo.txt
Geracao_codigo/: geracao_codigo.cpp  geracao_codigo.hpp
Tabela_simbolos/: tabela_simbolos.cpp  tabela_simbolos.hpp
lexical/: lexical.cpp  lexical.hpp
sintatico/: sintatico.cpp  sintatico.hpp
